--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "readblock",
     "version": "0.0.1",
-    "description": "nodejs module to read a big file block by block really fast",
+    "description": "nodejs module to read a big file block by block, with given delimiter, really fast",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
