--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-    "name": "readblock",
-    "version": "0.0.1",
-    "description": "nodejs module to read a big file block by block, with given delimiter, really fast",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/soichih/node-readblock"
-    },
-    "keywords": [
-        "read",
-        "file",
-        "delimited",
-        "fasta",
-        "buffer",
-        "block"
-    ],
-    "author": "Soichi Hayashi",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/soichih/node-readblock/issues"
-    },
-    "dependencies": {
-        "async": "*"
-    }
+  "name": "readblock",
+  "version": "0.0.1",
+  "description": "nodejs module to read a big file block by block, with given delimiter, really fast",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/soichih/node-readblock"
+  },
+  "keywords": [
+    "read",
+    "file",
+    "delimited",
+    "fasta",
+    "buffer",
+    "block"
+  ],
+  "author": "Soichi Hayashi",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/soichih/node-readblock/issues"
+  },
+  "dependencies": {
+    "async": "^0.9.0"
+  }
 }
